# design-patterns

./: .gitignore  pyproject.toml
observer_02/: main.py
