[tool.poetry]
name = "homework"
version = "0.1.0"
description = ""
authors = ["Divaltor <kuklavudu78@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
